--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Inter', sans-serif;
+  background: #21222A;
+  color: #DEE8F8;
+  height: 100vh;
+}
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav {
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+  /* border-bottom: 1px solid #61DAFB; */
+}
+
+.nav__logo {
+  display: flex;
+  align-items: center;
+}
+
+.nav__logo-icon {
+  width: 40px;
+  margin-right: 7px;
+}
+
+.nav__logo-text {
+  color: #61DAFB;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.nav__title {
+  font-weight: 600;
+}
+
+main {
+  padding: 3rem;
+  height: 100vh;
+}
+
+.main__title {
+  font-size: 39px;
+}
+
+.main__facts {
+  margin-top: 36px;
+  list-style: none;
+}
+
+.main__facts li {
+  padding: .75rem 0 .75rem 1.75rem;
+  position: relative;
+  font-size: 18px;
+  opacity: .8;
+}
+
+.main__facts li::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: .7rem;
+  height: .7rem;
+  border-radius: 50%;
+  background: #61DAFB;
 }
